# Document-QA-system

./: .gitignore  README.md  main.py  pyproject.toml  qa_history.json
app/: ingestion.py  llm.py  preProcessing.py  prompts.py  rag.py
